--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Path-Extended
 
+0.12 2009/05/15
+  - added file_or_dir() and dir_or_file() for convenience.
+
 0.11 2009/04/14
   - "find(_dir)" methods did not return items sometimes as relative
     path may contain "../"
