--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Path-Extended
 
+0.15 to be released
+  - $_ was not properly set while slurping/saving with multiple
+    callbacks
+
 0.14 2009/07/04
   - added file_or_dir() and dir_or_file() to ::Dir object too
 
