--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Path-Extended
 0.15 to be released
   - $_ was not properly set while slurping/saving with multiple
     callbacks
+  - renamed _path and made it public to support PSGI/Plack
 
 0.14 2009/07/04
   - added file_or_dir() and dir_or_file() to ::Dir object too
