added (is_read|writ)able methods

--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for Path-Extended
   - added a shortcut in the slurp method; no need to loop while
     slurping without any callbacks/filters
   - fixed pod nits spotted by FWIE
+  - added is_(read|writ)able methods
 
 0.15 2009/10/07
   - $_ was not properly set while slurping/saving with multiple
