--- a/Changes
+++ b/Changes
@@ -1,7 +1,17 @@
 Revision history for Path-Extended
 
-0.20 to be released
+0.20 2012/06/22
+  - ::Dir->is_absolute correctly returns if the path you passed to
+    the constructor is absolute or not (fixed by Wolfgang Pecho;
+    previously it always returned true).
+  - ::Dir->rmtree now accepts options that are passed to
+    File::Path::rmtree internally (fixed by Wolfgang Pecho).
+  - fixed "base" option for Path::Extended::Class::File::relative()
+    (by Wolfgang Pecho)
+
   - store $@ in a variable
+  - requires File::stat 1.0 explicitly to avoid File::Stat 0.01
+    under case-insensitive systems
 
 0.19 2011/05/31
   - added iomode (for slurp) and no_hidden (for children) options
