--- a/Changes
+++ b/Changes
@@ -1,9 +1,12 @@
 Revision history for Path-Extended
 
-0.21 2014/08/16
+0.22 2014/08/16
   - no code changes
   - dropped Test::Classy dependency
   - cpanfile
+
+0.21 2012/11/19
+  - made error logs more verbose
 
 0.20 2012/06/22
   - ::Dir->is_absolute correctly returns if the path you passed to
